[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprites/title screen/cc.png" type="Texture" id=1]
[ext_resource path="res://scripts/main_menu.gd" type="Script" id=2]
[ext_resource path="res://sprites/title screen/rumble_logo.png" type="Texture" id=3]
[ext_resource path="res://sprites/title screen/raider_logo.png" type="Texture" id=4]
[ext_resource path="res://sprites/title screen/msoe_logo_part.png" type="Texture" id=5]
[ext_resource path="res://fonts/title_font.tres" type="DynamicFont" id=6]
[ext_resource path="res://sprites/title screen/cloud.png" type="Texture" id=7]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("RaiderLogoPart:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 628, 249 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RumbleLogoPart:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 670, 357 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MSOELogoPart:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 391, 388 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Background:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "intro"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("RaiderLogoPart:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -267, 236 ), Vector2( 628, 249 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RumbleLogoPart:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1588, 363 ), Vector2( 670, 357 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MSOELogoPart:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 369, 866 ), Vector2( 369, 866 ), Vector2( 391, 388 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:blink")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("PressStart:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Background:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "method"
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "show_controls"
} ]
}

[node name="TitleMenu" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 640, 360 )
texture = ExtResource( 1 )

[node name="RaiderLogoPart" type="Sprite" parent="."]
position = Vector2( 628, 249 )
texture = ExtResource( 4 )

[node name="RumbleLogoPart" type="Sprite" parent="."]
position = Vector2( 670, 357 )
texture = ExtResource( 3 )

[node name="MSOELogoPart" type="Sprite" parent="."]
position = Vector2( 391, 388 )
texture = ExtResource( 5 )

[node name="Cloud" type="Sprite" parent="."]
position = Vector2( -93, 64 )
texture = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "intro"
anims/RESET = SubResource( 1 )
anims/intro = SubResource( 2 )

[node name="PressStart" type="Label" parent="."]
visible = false
modulate = Color( 1, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 461.0
margin_top = 594.0
margin_right = 819.0
margin_bottom = 623.0
custom_fonts/font = ExtResource( 6 )
text = "Press ATTACK to Play"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PressJump" type="Label" parent="."]
visible = false
modulate = Color( 1, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 20.0
margin_top = 20.0
margin_right = 225.0
margin_bottom = 69.0
custom_fonts/font = ExtResource( 6 )
text = "Press up to increase volume
Press down to decrease volume"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PressBlock" type="Label" parent="."]
visible = false
modulate = Color( 1, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 1053.0
margin_top = 20.0
margin_right = 1260.0
margin_bottom = 69.0
custom_fonts/font = ExtResource( 6 )
text = "Press BLOCK
For Credits"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TransitionColor" type="ColorRect" parent="."]
modulate = Color( 0, 0, 0, 0 )
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
